--- a/src/app/components/customer-table/customer-table.component.html
+++ b/src/app/components/customer-table/customer-table.component.html
@@ -1,57 +1,90 @@
-  <div class="mat-elevation-z8 margin">
 
-      <mat-form-field >
-        <input  matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
-      </mat-form-field>
+<mat-form-field >
+  <input  matInput (keyup)="applyFilter($event)" placeholder="Search" #input>
+</mat-form-field>
+
+<div class="demo-button-container">
+  <button mat-raised-button  class="demo-button">
+    Add Costumer
+  </button>
+  <button
+      mat-raised-button
+      
+      class="demo-button">
+    Remove Costumer
+  </button>
+</div>
+
+<section class="container mat-elevation-z8" tabindex="0">
 
     <table mat-table [dataSource]="dataSource" matSort>
-  
+      
+            <!-- Checkbox Column -->
+          <ng-container matColumnDef="select" >
+            <th mat-header-cell *matHeaderCellDef >
+              <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                            [checked]="selection.hasValue() && isAllSelected()"
+                            [indeterminate]="selection.hasValue() && !isAllSelected()"
+                            [aria-label]="checkboxLabel()">
+              </mat-checkbox>
+            </th>
+            <td mat-cell *matCellDef="let row" >
+              <mat-checkbox (click)="$event.stopPropagation()"
+                            (change)="$event ? selection.toggle(row) : null"
+                            [checked]="selection.isSelected(row)"
+                            [aria-label]="checkboxLabel(row)">
+              </mat-checkbox>
+            </td>
+          </ng-container>
+
       <!-- ID Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      <ng-container matColumnDef="id" >
+        <th class="id" mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td class="id" mat-cell *matCellDef="let row"> {{row.id}} </td>
       </ng-container>
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+        <th class="column" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td class="column" mat-cell *matCellDef="let row"> {{row.name}} </td>
       </ng-container>
   
       <!-- Last Name Column -->
       <ng-container matColumnDef="lastName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.lastName}} </td>
+        <th class="column" mat-header-cell *matHeaderCellDef mat-sort-header> Last Name </th>
+        <td class="column" mat-cell *matCellDef="let row"> {{row.lastName}} </td>
       </ng-container>
   
       <!-- Status Column -->
       <ng-container matColumnDef="status">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-        <td mat-cell *matCellDef="let row"> {{row.status}} </td>
+        <th class="column" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+        <td class="column" mat-cell *matCellDef="let row"> {{row.status}} </td>
       </ng-container>
   
       <!-- Email Column -->
       <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+        <th class="column" mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
+        <td class="column" mat-cell *matCellDef="let row"> {{row.email}} </td>
       </ng-container>
   
       <!-- Phone Column -->
       <ng-container matColumnDef="phone">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Phone </th>
-        <td mat-cell *matCellDef="let row"> {{row.phone}} </td>
+        <th class="column" mat-header-cell *matHeaderCellDef mat-sort-header> Phone </th>
+        <td class="column" mat-cell *matCellDef="let row"> {{row.phone}} </td>
       </ng-container>
   
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns sticky: true"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
   
       <!-- Row shown when there is no matching data. -->
       <tr class="mat-row" *matNoDataRow>
         <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
       </tr>
     </table>
-  
-    <mat-paginator color="accent" [pageSizeOptions]="[5, 10, 15, 50]" aria-label="Select page of costumers"></mat-paginator>
-  </div>
+
+    
+  </section>
+    <mat-paginator  color="accent" [pageSizeOptions]="[5, 10, 15, 50]" aria-label="Select page of costumers"></mat-paginator>
   
   
