--- a/src/app/components/customer-table/customer-table.component.scss
+++ b/src/app/components/customer-table/customer-table.component.scss
@@ -1,3 +1,7 @@
+.container {
+  height: 316px;
+  overflow: auto;
+}
 table {
     width: 100%;
   }
@@ -5,10 +9,22 @@ table {
     font-size: 14px;
     width: 100%;
   }
-  
-  td, th {
-    width: 16%;
+  .id {
+    padding-top: 10px;
+    width: 25%;
+    height: 41px;
   }
-.margin{
-  margin: 25px;
-}
+  .column{
+    padding-top: 10px;
+    width: 14%;
+    height: 41px;
+  }
+  .demo-button-container {
+    padding-bottom: 16px;
+  }
+  
+  .demo-button + .demo-button {
+    margin-left: 8px;
+  }
+
+
