--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,12 +1,12 @@
         <mat-toolbar color="primary">
             <span>Customer List </span>
             <span class="spacer"></span>
-            <button class="fab" mat-fab color="warn" #tooltip="matTooltip" matTooltip="Escríbeme."
+            <a (click)="openDialog('300ms', '500ms')" class="fab" mat-fab color="warn" #tooltip="matTooltip" matTooltip="Escríbeme."
             aria-label="Icon-button with email icon">
                 <mat-icon>email</mat-icon>
-            </button>
-            <button class="fab" matTooltip="Ver en Github." mat-fab color="warn" class="example-icon" aria-label="Icon-button with code icon">
+            </a>
+            <a (click)= "openLink('https://github.com/nicolascalvo73/CustomerChallenge')" class="fab" matTooltip="Ver en Github." mat-fab color="warn" class="example-icon" aria-label="Icon-button with code icon">
                 <mat-icon>code</mat-icon>
-            </button>
+            </a>
         </mat-toolbar>
 
